web/book/tests/snapshots/snapshot__tests__prql__language-features__coalesce-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from orders\nderive amount ?? 0\n"
---
SELECT
  *,
  COALESCE(amount, 0)
FROM
  orders

