web/book/tests/snapshots/snapshot__tests__prql__language-features__distinct-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "# youngest employee from each department\nfrom employees\ngroup department (\n  sort age\n  take 1\n)\n"
---
WITH table_1 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (
      PARTITION BY department
      ORDER BY
        age
    ) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
WHERE
  _expr_0 <= 1

