web/book/tests/snapshots/snapshot__tests__prql__language-features__f-strings-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from web\nselect url = f\"http{tls}://www.{domain}.{tld}/{page}\"\n"
---
SELECT
  CONCAT(
    'http',
    tls,
    '://www.',
    domain,
    '.',
    tld,
    '/',
    page
  ) AS url
FROM
  web

